Part 7 - Add search by Title and Brand name

--- a/USPlayingCard/Views/Cards/Index.cshtml
+++ b/USPlayingCard/Views/Cards/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<USPlayingCard.Models.Card>
+﻿@model USPlayingCard.Models.CardBrandViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -9,26 +9,37 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Cards" asp-action="Index" method="get">
+    <p>
+        <select asp-for="CardBrand" asp-items="Model.Brand">
+            <option value="">All</option>
+        </select>
+
+        Title: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Cards[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Brand)
+                @Html.DisplayNameFor(model => model.Cards[0].Brand)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Material)
+                @Html.DisplayNameFor(model => model.Cards[0].Material)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.Cards[0].Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Cards) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
