--- a/USPlayingCard/Views/Cards/Index.cshtml
+++ b/USPlayingCard/Views/Cards/Index.cshtml
@@ -35,7 +35,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Cards[0].Price)
             </th>
-            <th></th>
+            <th> @Html.DisplayNameFor(model => model.Cards[0].Rating)</th>
         </tr>
     </thead>
     <tbody>
@@ -52,6 +52,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
