--- a/USPlayingCard/Views/Home/Index.cshtml
+++ b/USPlayingCard/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <p>
         The USPC, though also commonly known as USPCC, established in 1867 as Russell, Morgan & Co. 
         and founded in its current incarnation in 1885, is a large American producer and distributor of playing cards. Its brands include Bicycle, 
-        Fournier, Bee, Tally-Ho, Congress, Hoyle, Aviator, Aristocrat and KEM.[1] It also produces novelty and 
+        Fournier, Bee, Tally-Ho, Congress, Hoyle, Aviator, Aristocrat and KEM. It also produces novelty and 
         custom cards, and other playing card accessories such as poker chips. The company was once based in Cincinnati,
         Ohio, but is now headquartered in the Cincinnati suburb of Erlanger, Kentucky.
     </p>
