--- a/USPlayingCard/wwwroot/css/site.css
+++ b/USPlayingCard/wwwroot/css/site.css
@@ -2,9 +2,9 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
@@ -13,7 +13,11 @@ a {
 }
 
 h1, h2 {
-    color:brown;
+    color:red;
+}
+
+p{
+font-size: 25px;
 }
 
 .btn-primary {
