--- a/USPlayingCard/Views/Cards/Details.cshtml
+++ b/USPlayingCard/Views/Cards/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+           <img class="image" src="@Url.Content(Model.ImageUrl)" />
         </dd>
     </dl>
 </div>
