Update privacy policy

--- a/USPlayingCard/Views/Home/Privacy.cshtml
+++ b/USPlayingCard/Views/Home/Privacy.cshtml
@@ -3,4 +3,66 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>The United States Playing Card Company Privacy Statement</h2>
+
+<h2>Your privacy is important to us</h2>
+
+
+<p>At The United States Playing Card Company,
+   we strive to honor the privacy and security of our users,
+   customers and suppliers, as well as their representatives,
+   in relation to all products, services, applications and websites
+   provided by The United States Playing Card Company, or any of its affiliates
+   (“USPC”), when acting as a Controller under relevant data protection rules and regulations.
+ </p>
+
+<p>
+    This Privacy Statement describes our privacy practices as required
+    by the General Data Protection Regulation (“GDPR”) (EU) (2016/679)
+    and other applicable data protection laws (collectively “Privacy Laws”).
+    This Privacy Statement applies where USPC is acting as a Data Controller
+    with respect to the Personal Data of our customers, employees, website users,
+    partners and service providers.  In other words, this Privacy Statement applies
+    where we determine the purposes and means of the processing of Personal Data.
+ </p>
+
+ <p>This Privacy Statement provides information regarding how we collect, process,
+     share, transfer, retain and protect your Personal Data and the rights you may exercise,
+     where applicable, regarding your information.  If you provide us with your Personal Data,
+     or we obtain Personal Data about you from other sources, we treat your Personal Data according
+     to this Privacy Policy.
+ </p>
+
+ <p>This Privacy Policy applies to USPC’s websites including, not limited to bicyclecards.com,
+    USPC mobile apps, USPC dedicated social media accounts, internet and wi-fi enabled devices, etc.
+    (“Sites”).  This Privacy Policy does not apply to third-party applications, products,
+    services, websites or social media features that may be accessed through links on our Sites that
+    have their own privacy policies.  Accessing those links will cause you to leave our Sites
+    and may result in the collection and/or sharing your Personal Data by a third party.
+    We do not control, endorse or make any representations about third-party websites or
+    their privacy practices, which may differ from ours.  We encourage you to review the
+    privacy practices of any site you interact with before allowing the collection and use
+    of your Personal Data. If you have any questions or comments regarding this Privacy Statement
+    or our data privacy practices, please contact us at Data Privacy Inquiry.
+ </p>
+
+  <h2>Personal data we collect about you</h2>
+
+  <p>When you complete a transaction, submit a request, set up an account,
+     apply for a position, visit our Sites, etc., with any USPC entity,
+     you may be asked to provide certain information, including, but not limited to,
+     your name, title, company, address, phone number, e-mail address, credit card information,
+     and line of business.  You may also be providing us with data regarding your devices including,
+     your IP address, your geolocation, your data usage, your client or supplier account, etc.
+     In limited circumstances, we may collect information related to you, and your family members,
+     such as age, gender and civil status.  This information and data may be Personal
+     Data under applicable Privacy Laws.
+   </p>
+
+   <h2>Why we process your personal data, legal bases for processing and retention</h2>
+
+   <p>Please consult the table below to see the categories of Personal Data
+      we may collect about you, why we process (collect, use, store, etc.)
+      your Personal Data, the legal grounds for such processing (where applicable)
+      and the relevant maximum retention period.
+   </p>
