--- a/USPlayingCard/Views/Shared/_Layout.cshtml
+++ b/USPlayingCard/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">The United States Playing Card Company</a>
+                <a class="navbar-brand logo" asp-controller="Home" asp-action="Index" style="color: red">The United States Playing Card Company</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
